add `name` field to app.yaml
this is because the name field is currently required by the wasmer-config schema.

--- a/app.yaml
+++ b/app.yaml
@@ -1,4 +1,5 @@
 kind: wasmer.io/App.v0
+name: wordpress # this can be overwritten in autobuild with the `--name` flag
 package: .
 capabilities:
   database:
